--- a/.github/workflows/Build_Development.yml
+++ b/.github/workflows/Build_Development.yml
@@ -59,3 +59,8 @@ jobs:
       shell: pwsh
       run: ./CD_1a_DeployServices.ps1 
       working-directory: ./solution/Deployment/workflows
+
+    - name: CD_2b_ConfigureServices
+      shell: pwsh
+      run: ./CD_2b_ConfigureServices.ps1 
+      working-directory: ./solution/Deployment/workflows
