Fixing issue with WebApp Build relating to old appsettings template

--- a/solution/WebApplication/WebApplication/appsettings.json
+++ b/solution/WebApplication/WebApplication/appsettings.json
@@ -10,7 +10,8 @@
     "UseMSI": false,
     "AdsGoFastTaskMetaDataDatabaseName": "",
     "AdsGoFastTaskMetaDataDatabaseServer": "",
-    "AppInsightsWorkspaceId": ""
+    "AppInsightsWorkspaceId": "",
+    "LogAnalyticsWorkspaceId": ""
   },
   "AllowedHosts": "*",
   //Azure Ad credentials are used by all downstream service connections by application, you should remove the Client Secret and use MSI for production deployments. 
