--- a/solution/Database/ADSGoFastDbUp/AdsGoFastDbUp/AdsGoFastDbUp.csproj
+++ b/solution/Database/ADSGoFastDbUp/AdsGoFastDbUp/AdsGoFastDbUp.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <None Remove="0-1-0-beta\A-Journaled\008-SampleTasks_SourceAndTargetSystems.sql" />
+    <None Remove="0-1-0-beta\A-Journaled\009-SampleTasks_TaskMasterWaterMark.sql" />
     <None Remove="0-1-0-beta\B-Always\001-Schemas.sql" />
     <None Remove="0-1-0-beta\B-Always\002-Tables.sql" />
     <None Remove="0-1-0-beta\B-Always\003-StoredProcsEtc.sql" />
@@ -25,6 +26,9 @@
     <EmbeddedResource Include="0-1-0-beta\A-Journaled\006-SampleTasks_TaskMaster.sql" />
     <EmbeddedResource Include="0-1-0-beta\A-Journaled\007-SampleTasks_TaskMasterWaterMark.sql" />
     <EmbeddedResource Include="0-1-0-beta\A-Journaled\008-SampleTasks_SourceAndTargetSystems.sql" />
+    <EmbeddedResource Include="0-1-0-beta\A-Journaled\009-SampleTasks_TaskMasterWaterMark.sql">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
