Fixed multiple small deployment issues
 On branch development/0.1
 Changes to be committed:
	modified:   README.md
	modified:   solution/DataFactory/IRConfig.json
	modified:   solution/DataFactory/Templates/pipeline/Master_{IR}.json
	modified:   solution/Database/ADSGoFastDbUp/AdsGoFastDbUp/0-1-0-beta/A-Journaled/008-SampleTasks_SourceAndTargetSystems.sql
	new file:   solution/Database/ADSGoFastDbUp/AdsGoFastDbUp/0-1-0-beta/A-Journaled/011-SampleTasks_SourceAndTargetSystems_Updated.sql
	modified:   solution/Database/ADSGoFastDbUp/AdsGoFastDbUp/AdsGoFastDbUp.csproj
	modified:   solution/Deployment/environments/development.json
	modified:   solution/Deployment/environments/environment.schema.json
	modified:   solution/Deployment/workflows/CD_0a_CreateServicePrincipals_AAD_Elevated.ps1
	modified:   solution/Deployment/workflows/CD_2b_ConfigureServices.ps1
	modified:   solution/Deployment/workflows/Cleanup_RemoveAll.ps1
	new file:   solution/Deployment/workflows/FileForUpload.json
	modified:   solution/Deployment/workflows/Steps/CD_ConfigureADF.ps1
	modified:   solution/Deployment/workflows/Steps/CD_ConfigureAzureSQLServer.ps1
	modified:   solution/Deployment/workflows/Steps/CD_ConfigureKeyVault.ps1
	modified:   solution/Deployment/workflows/Steps/CD_ConfigureSampleData.ps1
	modified:   solution/Deployment/workflows/Steps/CD_ConfigureVnet.ps1
	modified:   solution/Deployment/workflows/Steps/CD_ConfigureWebApp.ps1
	modified:   solution/Deployment/workflows/Steps/CD_DeployADF.ps1
	modified:   solution/Deployment/workflows/Steps/CD_DeployADFOnPremSHIR.ps1
	modified:   solution/Deployment/workflows/Steps/CD_DeployAppInsights.ps1
	modified:   solution/Deployment/workflows/Steps/CD_DeployAppService.ps1
	modified:   solution/Deployment/workflows/Steps/CD_DeployAzureSqlServer.ps1
	modified:   solution/Deployment/workflows/Steps/CD_DeployFunctionApp.ps1
	modified:   solution/Deployment/workflows/Steps/CD_DeployKeyVault.ps1
	modified:   solution/Deployment/workflows/Steps/CD_Depl

--- a/solution/DataFactory/IRConfig.json
+++ b/solution/DataFactory/IRConfig.json
@@ -53,34 +53,34 @@
             ],
             "pipeline": [
                 "AZ_SQL_AZ_Storage_Parquet_SH_IR.json",
-                "AZ-SQL-Create-Table-SH-IR.json",
-                "AZ-SQL-Full-Load-Chunk-SH-IR.json",
-                "AZ-SQL-Full-Load-SH-IR.json",
-                "AZ-SQL-Post-Copy-SH-IR.json",
-                "AZ-SQL-StoredProcedure-SH-IR.json",
-                "AZ-SQL-Watermark-Chunk-SH-IR.json",
-                "AZ-SQL-Watermark-SH-IR.json",
-                "AZ-Storage-Binary-AZ-Storage-Binary-SH-IR.json",
-                "AZ-Storage-CSV-AZ-SQL-SH-IR.json",
-                "AZ-Storage-Excel-AZ-SQL-SH-IR.json",
-                "AZ-Storage-Excel-AZ-Storage-CSV-SH-IR.json",
-                "AZ-Storage-JSON-AZ-SQL-SH-IR.json",
-                "AZ-Storage-Parquet-AZ-SQL-SH-IR.json",
-                "Create-Task-Master-AZ-SQL-OnP-SH-IR.json",
-                "Create-Task-Master-AZ-SQL-SH-IR.json",
-                "GEN-File-Binary-AZ-Storage-Binary-OnP-SH-IR.json",
-                "GEN-File-Binary-AZ-Storage-Binary-SH-IR.json",
-                "OnP-SQL-AZ-Storage-Parquet-OnP-SH-IR.json",
-                "OnP-SQL-Full-Load-Chunk-OnP-SH-IR.json",
-                "OnP-SQL-Full-Load-OnP-SH-IR.json",
-                "OnP-SQL-GEN-File-Parquet-OnP-SH-IR.json",
-                "OnP-SQL-Watermark-Chunk-OnP-SH-IR.json",
-                "OnP-SQL-Watermark-OnP-SH-IR.json",
-                "SH-SQL-AZ-Storage-Parquet-SH-IR.json",
-                "SH-SQL-Full-Load-Chunk-SH-IR.json",
-                "SH-SQL-Full-Load-SH-IR.json",
-                "SH-SQL-Watermark-Chunk-SH-IR.json",
-                "SH-SQL-Watermark-SH-IR.json"
+                "AZ_SQL_Create_Table_{IR}.json",
+                "AZ_SQL_Full_Load_Chunk_{IR}.json",
+                "AZ_SQL_Full_Load_{IR}.json",
+                "AZ_SQL_Post_Copy_{IR}.json",
+                "AZ_SQL_StoredProcedure_{IR}.json",
+                "AZ_SQL_Watermark_Chunk_{IR}.json",
+                "AZ_SQL_Watermark_{IR}.json",
+                "AZ_Storage_Binary_AZ_Storage_Binary_{IR}.json",
+                "AZ_Storage_CSV_AZ_SQL_{IR}.json",
+                "AZ_Storage_Excel_AZ_SQL_{IR}.json",
+                "AZ_Storage_Excel_AZ_Storage_CSV_{IR}.json",
+                "AZ_Storage_JSON_AZ_SQL_{IR}.json",
+                "AZ_Storage_Parquet_AZ_SQL_{IR}.json",
+                "Create_Task_Master_AZ_SQL_{IR}.json",
+                "Create_Task_Master_AZ_SQL_{IR}.json",
+                "GEN_File_Binary_AZ_Storage_Binary_{IR}.json",
+                "GEN_File_Binary_AZ_Storage_Binary_{IR}.json",
+                "OnP_SQL_AZ_Storage_Parquet_{IR}.json",
+                "OnP_SQL_Full_Load_Chunk_{IR}.json",
+                "OnP_SQL_Full_Load_{IR}.json",
+                "OnP_SQL_GEN_File_Parquet_{IR}.json",
+                "OnP_SQL_Watermark_Chunk_{IR}.json",
+                "OnP_SQL_Watermark_{IR}.json",
+                "SH_SQL_AZ_Storage_Parquet_{IR}.json",
+                "SH_SQL_Full_Load_Chunk_{IR}.json",
+                "SH_SQL_Full_Load_{IR}.json",
+                "SH_SQL_Watermark_Chunk_{IR}.json",
+                "SH_SQL_Watermark_{IR}.json"
             ]
         },
         {
@@ -100,14 +100,14 @@
                 "GenericAzureDataLakeStorage_OnPrem_Net.json"
             ],
             "pipeline": [
-                "Create-Task-Master-AZ-SQL-OnPrem_Net.json",
-                "GEN-File-Binary-AZ-Storage-Binary-OnPrem_Net.json",
-                "OnP-SQL-AZ-Storage-Parquet-OnPrem_Net.json",
-                "OnP-SQL-Full-Load-Chunk-OnP-SH-IR.json",
-                "OnP-SQL-Full-Load-OnP-SH-IR.json",
-                "OnP-SQL-GEN-File-Parquet-OnP-SH-IR.json",
-                "OnP-SQL-Watermark-Chunk-OnP-SH-IR.json",
-                "OnP-SQL-Watermark-OnP-SH-IR.json"
+                "Create_Task_Master_AZ_SQL_OnPrem_Net.json",
+                "GEN_File_Binary_AZ_Storage_Binary_OnPrem_Net.json",
+                "OnP_SQL_AZ_Storage_Parquet_OnPrem_Net.json",
+                "OnP_SQL_Full_Load_Chunk_{IR}.json",
+                "OnP_SQL_Full_Load_{IR}.json",
+                "OnP_SQL_GEN_File_Parquet_{IR}.json",
+                "OnP_SQL_Watermark_Chunk_{IR}.json",
+                "OnP_SQL_Watermark_{IR}.json"
             ]
         }
     ]
