Fixed issue with ExtractionSQL not passing through to ADF
 On branch development/0.1
 Changes to be committed:
	modified:   solution/Database/ADSGoFastDbUp/AdsGoFastDbUp/0-1-0-beta/A-Journaled/010-TaskTypeMapping_Update.sql
	modified:   solution/Deployment/workflows/Steps/CD_GrantRBAC.ps1
	deleted:    solution/FunctionApp/.DS_Store
	modified:   solution/FunctionApp/FunctionApp.csproj
	modified:   solution/FunctionApp/TaskMetaData/GetTaskInstanceJSON/ADFJsonBaseTask_ProcessTaskInstance.cs
	modified:   solution/FunctionApp/TaskMetaData/TaskInstance.cs

--- a/solution/FunctionApp/FunctionApp.csproj
+++ b/solution/FunctionApp/FunctionApp.csproj
@@ -81,6 +81,9 @@
     <None Update="KqlTemplates\GetADFActivityRuns.kql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="local.settings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="SqlTemplates\GenericTruncateInsert.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
